// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileProfile > snapshot — empty anti-patterns + mid-range sliders 1`] = `
"USER: Jens (Eksperten, dansk)

STYLE:
- Default 3–6 sætninger. Brug struktur ved >5 punkter.
- Match navne fra koden eksakt. Ingen opfundne ord.

AUTONOMY:
- Reversibelt: gør det, opsummér ændringen.
- Destruktivt eller tvetydigt: bekræft først.

TECH: arch:medium, data:medium, ux:medium, code:medium"
`;

exports[`compileProfile > snapshot — max anti-patterns at boundary 1`] = `
"USER: Jens (Den utålmodige, dansk)

STYLE:
- Default 1–3 sætninger. Vis data i tabel/liste hvis >5 punkter.
- Spring hilsner og "let me know"-closings over.
- Match navne fra koden eksakt. Ingen opfundne ord.

AUTONOMY:
- Reversibelt: bare kør, vis hvad der skete.
- Destruktivt: spørg først.
- Spørg ikke om ting du selv kan finde/gøre.

TECH: arch:deep, data:deep, ux:deep, code:deep

AVOID:
- anti-pattern-1
- anti-pattern-2
- anti-pattern-3
- anti-pattern-4
- anti-pattern-5
- anti-pattern-6
- anti-pattern-7
- anti-pattern-8
- anti-pattern-9
- anti-pattern-10
- anti-pattern-11
- anti-pattern-12
- anti-pattern-13
- anti-pattern-14
- anti-pattern-15
- anti-pattern-16
- anti-pattern-17
- anti-pattern-18
- anti-pattern-19
- anti-pattern-20"
`;

exports[`compileProfile > snapshot — persona "ekspert" (default profile) 1`] = `
"USER: Jens (Eksperten, dansk)

STYLE:
- Default 3–6 sætninger. Brug struktur ved >5 punkter.
- Match navne fra koden eksakt. Ingen opfundne ord.

AUTONOMY:
- Reversibelt: bare kør, vis hvad der skete.
- Destruktivt: spørg først.
- Spørg ikke om ting du selv kan finde/gøre.

TECH: arch:deep, data:deep, ux:deep, code:deep

AVOID:
- Forklar grundlæggende begreber
- Corporate-jargon"
`;

exports[`compileProfile > snapshot — persona "grundig" (default profile) 1`] = `
"USER: Jens (Den grundige, dansk)

STYLE:
- Forklar ræsonnement og trade-offs. Brug sektioner ved længere svar.
- Match navne fra koden eksakt. Ingen opfundne ord.

AUTONOMY:
- Bekræft plan før ikke-trivielle ændringer.
- Destruktivt: spørg altid først.

TECH: arch:deep, data:deep, ux:deep, code:deep

AVOID:
- Hop over edge-cases
- Antag uden at sige det"
`;

exports[`compileProfile > snapshot — persona "larling" (default profile) 1`] = `
"USER: Jens (Lærlingen, dansk)

STYLE:
- Forklar ræsonnement og trade-offs. Brug sektioner ved længere svar.
- Match navne fra koden eksakt. Ingen opfundne ord.

AUTONOMY:
- Bekræft plan før ikke-trivielle ændringer.
- Destruktivt: spørg altid først.

TECH: arch:medium, data:medium, ux:medium, code:medium

AVOID:
- Spring forklaring over
- Brug jargon uden at definere"
`;

exports[`compileProfile > snapshot — persona "utalmodig" (default profile) 1`] = `
"USER: Jens (Den utålmodige, dansk)

STYLE:
- Default 1–3 sætninger. Vis data i tabel/liste hvis >5 punkter.
- Spring hilsner og "let me know"-closings over.
- Match navne fra koden eksakt. Ingen opfundne ord.

AUTONOMY:
- Reversibelt: bare kør, vis hvad der skete.
- Destruktivt: spørg først.
- Spørg ikke om ting du selv kan finde/gøre.

TECH: arch:deep, data:deep, ux:deep, code:deep

AVOID:
- "Let me know if you need anything else"
- "Great question!"
- Tids-estimater"
`;

exports[`compileProfile > snapshot — utalmodig in english renders english labels + english anti-patterns 1`] = `
"USER: Jens (The impatient, english)

STYLE:
- Default 1–3 sentences. Use a table/list for >5 items.
- Skip greetings and "let me know"-closings.
- Match names from the code exactly. No invented terms.

AUTONOMY:
- Reversible: just do it, show what happened.
- Destructive: ask first.
- Don't ask about things you can find or do yourself.

TECH: arch:deep, data:deep, ux:deep, code:deep

AVOID:
- "Let me know if you need anything else"
- "Great question!"
- Time estimates"
`;
